welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: not found: value herbe
	herbe
        ^